--- a/public/modules/users/views/password/forgot-password.client.view.html
+++ b/public/modules/users/views/password/forgot-password.client.view.html
@@ -1,14 +1,15 @@
 <section class="row" data-ng-controller="PasswordController">
     <h3 class="col-md-12 text-center">Restore your password</h3>
-    <p class="small text-center">Enter your account username.</p>
+    <p class="small text-center">Enter your registration email.</p>
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
         <form data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
             <fieldset>
 				<div class="form-group">
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+					<input type="text" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
 				</div>
                 <div class="text-center form-group">
                     <button type="submit" class="btn btn-primary">Submit</button>
+                    <span us-spinner="{radius:10, width:4, length: 1}" spinner-key="spinner-forget" class="spinner"></span>
                 </div>
                 <div data-ng-show="error" class="text-center text-danger">
                     <strong>{{error}}</strong>
